新增proc_monthly_copy.sql

--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@
 /业务语句/230823用户权限跨企业复制.sql
 /业务语句/加盟店下发供应商999910.sql
 /业务语句/医保云商品查询.sql
-/业务语句/叶如意会员销售明细.sql
+/叶如意/叶如意会员销售明细.sql
 /业务语句/商品近效期数据导出.sql
 /业务语句/审阅方案删除.sql
 /业务语句/拜尔分配拿出来写.sql
