丁佳育门店缴款差异表(财务).sql,张官星aslk随访报表.sql,O2O产品成本变化报表.sql

--- a/.gitignore
+++ b/.gitignore
@@ -195,7 +195,7 @@
 /邱珍萍/促销调价单刷商品.sql
 /邱珍萍/促销调价单加业务机构.sql
 /邱珍萍/促销调价单复制.sql
-/邱珍萍/促销调价和促销赠送存储过程.sql
+/邱珍萍/促销调价和促销赠送存储过程(修改业务机构).sql
 /邱珍萍/储值卡充值规则触发器.sql
 /邱珍萍/刷新每个代金券类型下的商品.sql
 /邱珍萍/商品预约活动补券.sql
