罗氏回访报表

--- a/.gitignore
+++ b/.gitignore
@@ -4,30 +4,30 @@
 /o2o/发信息部补录门店邮费金额.sql
 /o2o/新零售O2O基础运营表.sql
 /o2o/补录邮费.~sql
-/丁佳育/1海典里补录邮费.sql
-/丁佳育/2-1补录邮费销售传入接口表.sql
-/丁佳育/2-2补录邮费销售传入接口表检验.sql
-/丁佳育/3-补录邮费后把数据重新刷到当天的o2o销售报表中.sql
-/丁佳育/4-补录邮费后重新执行销售统计相关过程.sql
-/丁佳育/业务机构对应零售付款方式.sql
-/丁佳育/代金券编号999的改创建时间,用于决策报表一致.sql
-/丁佳育/报表.sql
-/丁佳育/收银员日结对账单.sql
-/丁佳育/查询金额不相同的单号.sql
-/丁佳育/每月第三方券刷时间.sql
-/丁佳育/获取总部确认金额.sql
-/丁佳育/补录邮费销售传入接口表.sql
-/丁佳育/重新推送日结重传.sql
-/丁佳育/零售收款决策报表(财务).sql
-/丁佳育/零售缴款差异,刷总部确认金额.sql
-/丁佳育/零售缴款差异 修复门店日结单.sql
+/person/丁佳育/1海典里补录邮费.sql
+/person/丁佳育/2-1补录邮费销售传入接口表.sql
+/person/丁佳育/2-2补录邮费销售传入接口表检验.sql
+/person/丁佳育/3-补录邮费后把数据重新刷到当天的o2o销售报表中.sql
+/person/丁佳育/4-补录邮费后重新执行销售统计相关过程.sql
+/person/丁佳育/业务机构对应零售付款方式.sql
+/person/丁佳育/代金券编号999的改创建时间,用于决策报表一致.sql
+/person/丁佳育/报表.sql
+/person/丁佳育/收银员日结对账单.sql
+/person/丁佳育/查询金额不相同的单号.sql
+/person/丁佳育/每月第三方券刷时间.sql
+/person/丁佳育/获取总部确认金额.sql
+/person/丁佳育/补录邮费销售传入接口表.sql
+/person/丁佳育/重新推送日结重传.sql
+/person/丁佳育/零售收款决策报表(财务).sql
+/person/丁佳育/零售缴款差异,刷总部确认金额.sql
+/person/丁佳育/零售缴款差异 修复门店日结单.sql
 /业务语句/3需退货商品明细设置Excel导入重复数据查找.sql
 /业务语句/89063进销存数据单据明细.sql
 /业务语句/89063进销存数据查询.sql
 /业务语句/230823用户权限跨企业复制.sql
 /业务语句/加盟店下发供应商999910.sql
 /业务语句/医保云商品查询.sql
-/叶如意/叶如意会员销售明细.sql
+/person/叶如意/叶如意会员销售明细.sql
 /业务语句/商品近效期数据导出.sql
 /业务语句/审阅方案删除.sql
 /业务语句/拜尔分配拿出来写.sql
@@ -89,7 +89,7 @@
 /医保新增/药诊小计.~sql
 /医保新增/金华医保销售报表.sql
 /医保新增/金华医保销售报表.~sql
-/叶如意/黑马6折券补发.sql
+/person/叶如意/黑马6折券补发.sql
 /常用语句/1去重.sql
 /常用语句/1数组使用.sql
 /常用语句/233闪回查询.sql
@@ -163,12 +163,12 @@
 /数据直连门店视图/1正式库荣昌生物门店循环修改视图.sql
 /数据直连门店视图/2直连库运行 荣昌生物循环创建连接视图.sql
 /数据直连门店视图/3正式库运行 将荣昌生物每个视图插入到报表中显示.sql
-/李玲/12.21未来顾客信息.sql
-/李玲/刷卡占比报表22年.sql
-/李玲/刷卡占比报表22年.~sql
-/李玲/刷卡次数占比报表.sql
-/李玲/刷卡次数占比报表.~sql
-/林波辰/调拨单打印模板.sql
+/person/李玲/12.21未来顾客信息.sql
+/person/李玲/刷卡占比报表22年.sql
+/person/李玲/刷卡占比报表22年.~sql
+/person/李玲/刷卡次数占比报表.sql
+/person/李玲/刷卡次数占比报表.~sql
+/person/林波辰/调拨单打印模板.sql
 /检查带输出的存储过程的错误/加盟店-日进销存报表查询.sql
 /滞销可退表/10.20滞销可退表修改后
 /滞销可退表/10.~20滞销可退表修改后
@@ -179,38 +179,38 @@
 /电商处方更新/处方编辑报表处方更新空的处方日期.sql
 /电商处方更新/电商处方编辑导入.sql
 /电商处方更新/电商处方编辑导入.~sql
-/瞿音琴/首营企业加供应商.sql
-/瞿音琴/首营企业加供应商.~sql
+/person/瞿音琴/首营企业加供应商.sql
+/person/瞿音琴/首营企业加供应商.~sql
 /草稿/9草晶华.sql
 /草稿/222效期金额.sql
-/蒋丹阳/商品监控报表.sql
-/蒋丹阳/按商品维度 调拨,在途监控.sql
-/蒋丹阳/按商品维度 调拨,在途监控.~sql
-/蒋丹阳/按门店维度 调拨,在途监控.sql
-/蒋丹阳/按门店维度 调拨,在途监控.~sql
-/蒋丹阳/调拨,在途监控.~sql
-/蒋丹阳/门店监控报表.sql
-/蒋丹阳/门店监控报表.~sql
-/邱珍萍/代金券限制商品.sql
-/邱珍萍/促销调价单刷商品.sql
-/邱珍萍/促销调价单加业务机构.sql
-/邱珍萍/促销调价单复制.sql
-/邱珍萍/促销调价和促销赠送存储过程(修改业务机构).sql
-/邱珍萍/储值卡充值规则触发器.sql
-/邱珍萍/刷新每个代金券类型下的商品.sql
-/邱珍萍/商品预约活动补券.sql
-/邱珍萍/商品预约界面，备注“11月活动10元预约”和“双十一110元预约”，这两条能帮我刷到康康、方同仁、康盛堂、弘德、保济堂、新昌的界面吗？.sql
-/邱珍萍/导入会员卡号补特定券.sql
-/邱珍萍/把一个代金券类型下的商品明细复制给另一个代金券类型.sql
-/邱珍萍/补券.sql
-/邱珍萍/补券过程.sql
-/郑宇婷/导出退仓申请单明细.sql
-/郑宇婷/导出退仓申请单明细.~sql
-/郭煜/商品类别导出.sql
-/颜敏会/20231004药店诊所未回访2022年.sql
-/颜敏会/20231004药店诊所未回访2023年数据重新统计.sql
-/颜敏会/增加集团促销赠送单号业务机构.sql
-/颜敏会/慢病管理分类119101-119126.sql
+/person/蒋丹阳/商品监控报表.sql
+/person/蒋丹阳/按商品维度 调拨,在途监控.sql
+/person/蒋丹阳/按商品维度 调拨,在途监控.~sql
+/person/蒋丹阳/按门店维度 调拨,在途监控.sql
+/person/蒋丹阳/按门店维度 调拨,在途监控.~sql
+/person/蒋丹阳/调拨,在途监控.~sql
+/person/蒋丹阳/门店监控报表.sql
+/person/蒋丹阳/门店监控报表.~sql
+/person/邱珍萍/代金券限制商品.sql
+/person/邱珍萍/促销调价单刷商品.sql
+/person/邱珍萍/促销调价单加业务机构.sql
+/person/邱珍萍/促销调价单复制.sql
+/person/邱珍萍/促销调价和促销赠送存储过程(修改业务机构).sql
+/person/邱珍萍/储值卡充值规则触发器.sql
+/person/邱珍萍/刷新每个代金券类型下的商品.sql
+/person/邱珍萍/商品预约活动补券.sql
+/person/邱珍萍/商品预约界面，备注“11月活动10元预约”和“双十一110元预约”，这两条能帮我刷到康康、方同仁、康盛堂、弘德、保济堂、新昌的界面吗？.sql
+/person/邱珍萍/导入会员卡号补特定券.sql
+/person/邱珍萍/把一个代金券类型下的商品明细复制给另一个代金券类型.sql
+/person/邱珍萍/补券.sql
+/person/邱珍萍/补券过程.sql
+/person/郑宇婷/导出退仓申请单明细.sql
+/person/郑宇婷/导出退仓申请单明细.~sql
+/person/郭煜/商品类别导出.sql
+/person/颜敏会/20231004药店诊所未回访2022年.sql
+/person/颜敏会/20231004药店诊所未回访2023年数据重新统计.sql
+/person/颜敏会/增加集团促销赠送单号业务机构.sql
+/person/颜敏会/慢病管理分类119101-119126.sql
 /2快捷键.sql
 /11111excel导入步骤.sql
 /81179叶琳琴销售.sql
