--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@
 /person/丁佳育/每月第三方券刷时间.sql
 /person/丁佳育/获取总部确认金额.sql
 /person/丁佳育/补录邮费销售传入接口表.sql
-/person/丁佳育/重新推送日结重传.sql
+/person/丁佳育/重新推送日结重传(日结重传不刷).sql
 /person/丁佳育/零售收款决策报表(财务).sql
 /person/丁佳育/零售缴款差异,刷总部确认金额.sql
 /person/丁佳育/零售缴款差异 修复门店日结单.sql
